--- a/partials/itemList.html
+++ b/partials/itemList.html
@@ -8,7 +8,7 @@
         <option value="">Don't Sort by Category</option>
       </select>
     </label>
-    <label>Search by name:
+    <label>Search by name:{{test}}
       <input type="text" ng-model="nameSearch.name" placeholder="Enter name of tea here...">
     </label>
   </div>
